# r-playground-mcp

./: .cursorrules  .dockerignore  CLAUDE.md  Dockerfile  README.md  error_type_test.py  hello.py  pyproject.toml  smithery.yaml
rplayground_mcp/: cli_basic.py  configuration.py  mcp_cli.py  prompts.py  session_manager.py  session_manager_interface.py  session_manager_test.py  test_cli.py  test_simple.py  utils.py
rplayground_mcp/pdf_conversion/: converter_subprocess.py  converter_subprocess_impl.py
scripts/: setup_helper.py
tests/: conftest.py  session_manager_test.py  test_mp_converter.py  test_multiple_plots.py  test_plotting.py
